--- a/sass/layout/sakai/_main.scss
+++ b/sass/layout/sakai/_main.scss
@@ -8,8 +8,8 @@ html {
 }
 
 body {
-	font-family: Lora;
-	// font-family: var(--font-family);
+	// font-family: Lora;
+	font-family: var(--font-family);
 	color: var(--text-color);
 	background-color: var(--surface-ground);
 	margin: 0;
