add bkgrd img to index

--- a/sass/layout/_myadditions.scss
+++ b/sass/layout/_myadditions.scss
@@ -57,3 +57,19 @@
 .ql-align-left {
 	text-align: left;
 }
+.ql-indent-1,
+.ql-indent-2,
+.ql-indent-3 {
+	background: #f9f9f9;
+	border-left: 10px solid #ccc;
+	margin: 1.5em 10px;
+	padding: 0.5em 10px;
+	quotes: '\201C''\201D''\2018''\2019';
+}
+
+.splash {
+	background-image: url('/imgs/2019_nyrc.jpg');
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	background-size: cover;
+}
