--- a/sass/layout/_myadditions.scss
+++ b/sass/layout/_myadditions.scss
@@ -42,11 +42,11 @@
 	border-color: green;
 	box-shadow: 0 0 0 1px green;
 }
-[data-complete] .formkit-inner::after {
+/* [data-complete] .formkit-inner::after {
 	content: '✅';
 	display: block;
 	padding: 0.5em;
-}
+} */
 
 .ql-align-center {
 	text-align: center;
@@ -66,7 +66,11 @@
 	padding: 0.5em 10px;
 	quotes: '\201C''\201D''\2018''\2019';
 }
-
+.img-fluid {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+}
 .splash {
 	background-image: url('/imgs/2019_nyrc.jpg');
 	-webkit-background-size: cover;
