adjust quill indent

--- a/sass/layout/_myadditions.scss
+++ b/sass/layout/_myadditions.scss
@@ -60,8 +60,7 @@
 .ql-indent-1,
 .ql-indent-2,
 .ql-indent-3 {
-	background: #f9f9f9;
-	border-left: 10px solid #ccc;
+	background: transparent;
 	margin: 1.5em 10px;
 	padding: 0.5em 10px;
 	quotes: '\201C''\201D''\2018''\2019';
