roster chart works

--- a/sass/layout/_myadditions.scss
+++ b/sass/layout/_myadditions.scss
@@ -77,9 +77,10 @@
 	font-size: small;
 }
 
-.splash {
+/* .splash {
 	background-image: url('/imgs/2019_nyrc.jpg');
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	background-size: cover;
 }
+ */
