--- a/sass/layout/_overrides.scss
+++ b/sass/layout/_overrides.scss
@@ -1,7 +1,8 @@
 // Suggested location to add your overrides so that migration would be easy by just updating the SASS folder in the future
 @import '_myadditions';
 
-a {
+// why ???
+/* a {
 	outline: none !important;
 	box-shadow: none !important;
 }
@@ -9,7 +10,7 @@ a {
 button {
 	outline: none !important;
 	box-shadow: none !important;
-}
+} */
 
 .p-radiobutton {
 	margin-right: 5px;
@@ -17,4 +18,8 @@ button {
 
 .field-radiobutton {
 	margin-top: 10px;
+}
+// overrides all themes
+body {
+	background-color: rgb(0, 0, 150);
 }
