--- a/sass/layout/_myadditions.scss
+++ b/sass/layout/_myadditions.scss
@@ -1,31 +1,34 @@
 // _myadditions.scss
 
 .alert-danger {
-	margin: auto;
-	padding: 0.5rem;
+	margin-right: auto;
+	padding: 0.25rem;
 	background-color: white;
 	color: red;
-	width: 75%;
+	width: 25%;
+	text-align: center;
 	border: 1px solid red;
-	border-radius: 10px;
+	border-radius: 5px;
 }
 .alert-success {
-	margin: auto;
-	padding: 0.5rem;
+	margin-right: auto;
+	padding: 0.25rem;
 	background-color: white;
 	color: yellow;
-	width: 75%;
+	width: 25%;
+	text-align: center;
 	border: 1px solid yellow;
-	border-radius: 10px;
+	border-radius: 5px;
 }
 .alert-info {
-	margin: auto;
+	margin-right: auto;
 	padding: 0.5rem;
 	background-color: white;
 	color: green;
-	width: 75%;
+	width: 25%;
+	text-align: center;
 	border: 1px solid green;
-	border-radius: 10px;
+	border-radius: 5px;
 }
 
 [data-invalid] .formkit-inner {
